--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,4 +19,9 @@
     </div>
   </div>
 </nav>
-<router-outlet></router-outlet>
+<div class="container my-4">
+  <router-outlet></router-outlet>
+</div>
+<!-- <nav class="bg-dark  py-3">
+  <div class="bg-dark ">asasasasa</div>
+</nav> -->
