--- a/src/app/components/user-perfil/user-perfil.component.html
+++ b/src/app/components/user-perfil/user-perfil.component.html
@@ -10,25 +10,10 @@
         <p><strong>Email: </strong>{{user.email}}</p>
 
         <div class="btn-group" role="group" aria-label="Basic outlined example">
-            <button type="button" class="btn btn-outline-dark">Eliminar</button>
-            <button type="button" class="btn btn-outline-dark">Actualizar</button>
-            <button type="button" class="btn btn-outline-dark">Volver al listado</button>
+            <button type="button" class="btn btn-outline-dark" (click)="deleteUser(user._id)">Eliminar</button>
+            <button type="button" class="btn btn-outline-dark" [routerLink]="['/updateuser', user._id]" routerLinkActive="router-link-active">Actualizar</button>
+            <button type="button" class="btn btn-outline-dark" (click)="goHome()">Volver al listado</button>
         </div>
 
     </div>
 </div>
-
-<!-- <div class="mt-5" style="max-width: 1440px;">
-    <div class="row g-5">
-      <div class="col-md-4">
-        <img src="https://via.placeholder.com/150 " class="img-fluid  d-block float-end rounded-circle w-100" alt="...">
-      </div>
-      <div class="col-md-8 border-start">
-        <div class="card-body">
-          <h5 class="card-title">Título de la tarjeta</h5>
-          <p class="card-text">Esta es una tarjeta más amplia con texto de apoyo a continuación como introducción natural a contenido adicional. Este contenido es un poco más largo.</p>
-          <p class="card-text"><small class="text-muted">Última actualización hace 3 minutos</small></p>
-        </div>
-      </div>
-    </div>
-  </div> -->
