--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -17,3 +17,13 @@ p{
         font-size: 12px;
     }
 }
+
+li{
+    &.page-item{
+        cursor: pointer;    
+    }
+
+    &.active, &.disabled{
+        cursor: auto;
+    }
+}
