--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,12 +21,12 @@
     </div>
   </nav>
 </header>
-<main>
+<main class="mb-5">
   <div class="container my-4">
     <router-outlet></router-outlet>
   </div>
 </main>
-<footer class="bg-dark text-light p-2 d-flex flex-column align-items-center mt-3">
+<footer class="bg-dark text-light p-2 fixed-bottom d-flex flex-column align-items-center">
   <small>Copyright@</small>
   <!-- <small>Todos los derechos reservados</small> -->
 </footer>
