--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,13 +1,11 @@
 <nav aria-label="Page navigation example" class="mt-3">
   <ul class="pagination justify-content-center">
-    <li class="page-item disabled">
-      <a class="page-link">Anterior</a>
+    <li class="page-item" [ngClass]="{disabled: currentPage === 1}">
+      <a class="page-link" (click)="goToPage(currentPage - 1)">Anterior</a>
     </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item">
-      <a class="page-link" href="#">Siguiente</a>
+    <li class="page-item " [ngClass]="{active: currentPage === item}" *ngFor="let item of pages"><a class="page-link" (click)="goToPage(item)">{{item}}</a></li>
+    <li class="page-item" [ngClass]="{disabled: currentPage === pages.length}">
+      <a class="page-link" (click)="goToPage(currentPage + 1)">Siguiente</a>
     </li>
   </ul>
 </nav>
